# fast-photon

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  launch_vscode.sh
assets/: assets.json
assets/data/: audio_config.json  camera_config.json  input_bindings.json
assets/data/factions/enemy/: assets.json
assets/data/factions/enemy/units/: archer.json
assets/data/factions/player/: assets.json
assets/data/factions/player/units/: warrior.json  warrior.lua
assets/data/scenes/: main.json
assets/shaders/: bright_extract.comp  debug.vert  grid.frag  grid.vert  post.frag  post.vert  sprite.frag  sprite.vert  text.frag  text.vert  vfx.frag  vfx.vert  vfx_simulate.comp  vfx_spawn.comp
hooks/: pre-commit  pre-commit.py
lib/sol/: config.hpp  sol.hpp
scripts/: install_hooks.sh  prepare_all.sh  setup_venv.sh
src/: main.cpp
src/App/: AppController.cpp  GameLoop.cpp
src/Core/Assert/: Assert.h
src/Core/Events/: EventBus.h
src/Core/Log/: Log.h
src/Core/Math/: Mat4.h  MathUtils.h  Transform.h  Vec3.h  Vec4.h
src/Core/Time/: Time.cpp  Time.h
src/ECS/Components/: FactionComponent.h  RenderComponent.h
src/ECS/Components/Camera/: ActiveCameraTag.h  CameraComponent2D.h  CameraConfig.cpp  CameraConfig.h  CameraMath.h
src/ECS/Systems/: CameraController.cpp  CameraController.h  RenderSystem.cpp  RenderSystem.h  System.h
src/Gameplay/GridMap/: GridMap.cpp  GridMap.h  Tile.h
src/Gameplay/TurnManager/: TurnManager.cpp  TurnManager.h
src/Platform/Input/: Input.cpp  Input.h  InputMap.cpp  InputMap.h
src/Platform/Window/: Window.cpp  Window.h  WindowEvents.h
src/Renderer/: DescriptorAllocator.cpp  GridRenderer.cpp  GridRenderer.h  MaterialRegistry.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  ShaderCache.cpp  ShaderCache.h  SpriteRegistry.h  StbImpl.cpp  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VulkanContext.cpp  VulkanContext.h
src/engine/Animation/: Animation.h  AnimationRegistry.cpp  AnimationRegistry.h  AnimationSystem.cpp  AnimationSystem.h
src/engine/App/: AppController.cpp  AppController.h  GameLoop.cpp  GameLoop.h
src/engine/Audio/: AudioConfig.cpp  AudioConfig.h  AudioDevice.cpp  AudioDevice.h  AudioImpl.cpp  Sound.h  SoundCache.cpp  SoundCache.h
src/engine/Core/Events/: EventBus.cpp  Subscription.h
src/engine/Core/Job/: JobSystem.cpp  JobSystem.h
src/engine/Core/Log/: Log.cpp  Log.h
src/engine/Core/Math/: Math.h  Quat.h  Vec2.h
src/engine/Core/Profiler/: GpuProfiler.cpp  GpuProfiler.h  GpuProfilerWindow.cpp  GpuProfilerWindow.h  Profiler.cpp  Profiler.h  ProfilerWindow.cpp  ProfilerWindow.h
src/engine/Core/StringAtom/: StringAtom.cpp  StringAtom.h
src/engine/Core/StringUtil/: Utf8.cpp  Utf8.h
src/engine/Core/Time/: Time.cpp  Time.h
src/engine/Platform/: FileWatcher.cpp  FileWatcher.h  SdlContext.cpp  SdlContext.h
src/engine/Platform/Input/: Input.h  InputEvents.h  InputMap.cpp  InputMap.h
src/engine/Platform/Window/: WindowEvents.h
src/engine/Renderer/: BrightExtractPass.cpp  BrightExtractPass.h  BrightImage.cpp  BrightImage.h  ComputePipeline.cpp  ComputePipeline.h  DebugDraw.cpp  DebugDraw.h  DescriptorAllocator.h  Font.h  FontAtlasBuilder.cpp  FontAtlasBuilder.h  FontRegistry.cpp  FontRegistry.h  FrameRenderer.cpp  FrameRenderer.h  HdrTarget.cpp  HdrTarget.h  IRenderBackend.h  ImGuiLayer.cpp  ImGuiLayer.h  Material.h  MaterialRegistry.cpp  Pipeline.cpp  Pipeline.h  PostProcess.cpp  PostProcess.h  RenderLayer.h  RenderPass.cpp  RenderPass.h  RenderQueue.cpp  RenderQueue.h  RendererEvents.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  ShaderCache.cpp  ShaderCache.h  Sprite.h  SpriteRegistry.cpp  (+15 more)
src/engine/Scene/: Prefab.h  PrefabRegistry.cpp  PrefabRegistry.h
src/engine/Scene/Components/: AnimationComponent.h  ParticleEmitterComponent.h  ScriptComponent.h  SpriteComponent.h  TagComponent.h  TransformComponent.h
src/engine/Scene/Components/Camera/: CameraMath.h
src/engine/Scene/Systems/: System.h
src/engine/Script/: ScriptSystem.cpp  ScriptSystem.h
src/engine/Vfx/: ParticleSystem.h  ParticleSystemRegistry.cpp  ParticleSystemRegistry.h  VfxSystem.cpp  VfxSystem.h
src/game/: main.cpp
src/game/Components/: GridComponent.h  SelectionState.h
src/game/Gameplay/TurnManager/: Faction.h  TurnEvents.h
src/game/Renderer/: GridRenderer.cpp  GridRenderer.h
src/game/Scene/: JsonSceneLoader.cpp  JsonSceneLoader.h  World.cpp  World.h
src/game/Systems/: CameraController.cpp  CameraController.h  RenderSystem.cpp  RenderSystem.h  SelectionSystem.cpp  SelectionSystem.h
tools/: README.md
tools/animation_editor/: README.md  main.py  manifest.py  run.bat  run.sh
tools/animation_editor/ui/: animations_tab.py  main_window.py  preview_tab.py  sets_tab.py  sheet_canvas.py  sheet_slicer.py  state_graph.py  thumbnail_cache.py
tools/asset_indexer/: check_staged.py  index.py  index.sh
tools/atlas_baker/: bake.py  bake.sh  requirements.txt
tools/manifest_baker/: README.md  bake.py  requirements.txt  run.bat  run.sh
tools/particle_editor/: README.md  main.py  manifest.py  run.bat  run.sh
tools/particle_editor/ui/: editor_tab.py  main_window.py  preview_canvas.py  thumbnail_cache.py
